# zorglonde

./: .gitignore  LICENSE  README.md  demo.py  pyproject.toml  test.py  zorglangue_traductor.py
.github/workflows/: python-package.yml
