[tool.poetry]
name = "zorglangue_traductor"
version = "2.0.0"
description = "A Python module to translate any Latin language (originally French) to the Zorglangue fake language from the Spirou comic strips. Works in the two ways. Eviv Bulgroz!"
authors = ["Raphaël Denni <65921801+raphaeldenni@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/raphaeldenni/zorglangue-traductor"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
icecream = "^2.1.3"
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
